<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/album_description_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16sp"
            android:layout_marginBottom="16sp"
            android:hint="@string/name"
            android:inputType="textMultiLine" />
    <TextView
        android:layout_width="wrap_content"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:text="@string/toppings" />
    <CheckBox
        android:id="@+id/notify_me_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cream_1"
        style="@style/CustomText"
        android:textAppearance="?android:textAppearanceMedium"/>
        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate_2"
            style="@style/CustomText"

            android:textAppearance="?android:textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/quantity"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="minus"
                android:text="-"/>

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="1" />
            <Button
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:onClick="plus"
                android:layout_height="wrap_content"
                android:text="+"/>
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/order_summary"
            />
        <TextView
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="$0"
            />
        <Button
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="quantity"
            android:text="@string/order"/>

        <ImageView
            android:layout_width= "match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/coffe"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>